apps/web/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        # https://hub.docker.com/r/binhex/arch-sabnzbdvpn/tags
        image: binhex/arch-sabnzbdvpn:4.5.5-1-01
        resources:
          requests:
            memory: "6Gi"
            cpu: "6000m"
          limits:
            memory: "16Gi"
            cpu: "10000m"
        securityContext:
          # runAsNonRoot: true
          # runAsUser: 1000
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
        ports:
        - containerPort: 8080
        - containerPort: 8090
        volumeMounts:
        - name: config
          mountPath: /config
          subPath: sabnzbd
        - name: downloads
          mountPath: /config/Downloads
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: sabnzbd-downloads-sabnzbd-pvc
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config-pvc
