apps/web/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
