apps/web/sabnzbd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: sabnzbd
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      middlewares:
        - name: https-proto
        - name: authelia-forwardauth
      services:
        - name: sabnzbd
          port: 80
